styles.css
body {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-width: 100vh;
    margin: 0;
    padding: 0;
    background-image: url(./images/backgroundImage80opacity.png);
    background-color: lightblue; /* Backup background */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: unset;
    font-family: 'Times New Roman';
    color: black;
}

h1 {
    color:rgb(0, 0, 0);
    text-align: center;
    font-size: 55px;
    padding: 0;
    text-shadow: 
    -1px -1px 0 #ffffff,
     1px -1px 0 #ffffff,
    -1px  1px 0 #ffffff,
     1px  1px 0 #ffffff;
}

#centeringContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-width: 50%;
    max-width: 50%;
}

#questionText {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-weight: bold;
    word-wrap: break-word;
    font-size: 30px;
    height: auto;
    margin-left: 10px;
    margin-right: 10px;
}

#quizContainer {
    margin-top: -10px;
    margin-bottom: 1em;
    width: 100%;
    background-color: rgb(234, 216, 251);
    height: auto;
    border: 0.1px solid black;
}

#choicesContainer {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto repeat(2, 1fr);
    justify-content: center;
    justify-items: center;
    align-items: start;
    max-height: 10em;
    min-width: 100%;
    max-width: 100%;
}

.choiceButtons {
    display: flex;
    justify-content: center;
    justify-items: center;
    height: 80px;
    width: 100.5%;
    font-weight: bold;
    font-size: 20px;
    border: 0.1px black solid;
}

#submit, #nextQuestionButton, #startOverButton, .choiceButtons {
    cursor: pointer;
    align-self: center;
}

#submit {
    height: 2em;
    width: 6em;
    margin-top: -1em;
}

#nextQuestionButton {
    height: 2em;
    width: 8em;
    margin-bottom: 2em;
}

#startOverButton {
    height: 2em;
    width: 6em;
    margin: 0 auto;
}

#explanationContainer {
    display: flex;
    height: auto;
    width: 100%;
    border: 0.1px solid black;
    background-color: rgb(185, 238, 255);
}

#explanationText {
    text-align: center;
    font-size: 20px;
    color: black;
    margin-left: 10px;
    margin-right: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
}

#quizCompletedTextContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 12%;
    width: 36em;
    height: 19.5em;
    border-radius: 5%;
    color: aquamarine;
    border: 0.1px solid black;
    background-color: rgba(242, 233, 233, 0.65);
    text-shadow: 
    -1px -1px 0 #000,  
     1px -1px 0 #000,
    -1px  1px 0 #000,
     1px  1px 0 #000;
}

.quizCompletedText {
    display: block;
    text-align: center;
    font-size: 100px;
    font-weight: bold;
    margin-bottom: 0.2em;
}

.correct {
    background-color: rgb(5, 250, 5);
}

.incorrect {
    background-color: red;
}

.selection {
    background-color: rgb(190, 181, 181);
    color: black;
    border: 1px black solid;
}

.disabled {
    color: gray;
    cursor: default;
    opacity: 0.5;
}

